[package]
name = "zcash-radio-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
