[package]
name = "zcash-radio-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
criterion = { version = "0.5", features = ["async"] }

[[bench]]
name = "scanner_bench"
harness = false
